XBEAN-239 fix toURL for java7
git-svn-id: https://svn.apache.org/repos/asf/geronimo/xbean/trunk@1443409 13f79535-47bb-0310-9956-ffa450edef68